focus changed fix, object updates

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,9 +18,7 @@ Methods
   - handleInactivity(callback)
 
 Site.js
-  -
-  -
-  -
+  - Constructor function for a Site object
 
 
  ---------------------
